Fix spacing of new hero page

--- a/client-src/common/components/logged-in-header/header.css
+++ b/client-src/common/components/logged-in-header/header.css
@@ -32,6 +32,7 @@
   @mixin clip-bg-to-text;
   font-size: 21px;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .appHeader-overlayNavToggle {
